--- a/Flagrum.Web/_Imports.razor
+++ b/Flagrum.Web/_Imports.razor
@@ -12,9 +12,10 @@
 @using Flagrum.Web.Components.Layout
 @using Flagrum.Web.Components.Modals
 @using Flagrum.Web.Services
-@using Blazor.Diagrams.Core;
-@using Blazor.Diagrams.Core.Models;
-@using Blazor.Diagrams.Components;
-@using Blazor.Diagrams.Components.Renderers;
-@using Blazor.Diagrams.Components.Groups;
-@using Microsoft.Extensions.Logging;
+@using Blazor.Diagrams.Core
+@using Blazor.Diagrams.Core.Models
+@using Blazor.Diagrams.Components
+@using Blazor.Diagrams.Components.Renderers
+@using Blazor.Diagrams.Components.Groups
+@using Microsoft.Extensions.Logging
+@using Blazor.Extensions.Canvas
