--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -28,8 +28,19 @@
     <BodyView>
         <div class="h-full p-6 scrollbar-light" style="max-height: 100%; overflow-y: auto">
             <h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
-
             <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+                <h4 class="text-grey-300 mb-4">Flagrum 1.1.3</h4>
+                <h5 class="text-grey-300 mb-4">Modding</h5>
+                <ul class="list-disc ml-6 mb-6">
+                    <li>
+                        Support for increased 
+                        <Hyperlink Text="vertex weight limits" Uri="https://github.com/Kizari/Flagrum/wiki/Vertex-Weight-Limitations" />
+                        on meshes with materials that support it
+                    </li>
+                </ul>
+            </div>
+            
+            <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.2</h4>
                 <h5 class="text-grey-300 mb-4">Modding</h5>
                 <ul class="list-disc ml-6 mb-4">
