--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -29,6 +29,15 @@
         <div class="h-full p-6 scrollbar-light" style="max-height: 100%; overflow-y: auto">
             <h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
             <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+                <h4 class="text-grey-300 mb-4">Flagrum 1.1.4</h4>
+                <h5 class="text-grey-300 mb-4">Modding</h5>
+                <ul class="list-disc ml-6 mb-6">
+                    <li>Support for materials update from Flagrum Blender 1.0.4</li>
+                    <li>Support for custom normals from Flagrum Blender 1.0.4</li>
+                </ul>
+            </div>
+            
+            <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.3</h4>
                 <h5 class="text-grey-300 mb-4">Modding</h5>
                 <ul class="list-disc ml-6 mb-6">
