--- a/Flagrum.Web/_Imports.razor
+++ b/Flagrum.Web/_Imports.razor
@@ -19,3 +19,5 @@
 @using Blazor.Diagrams.Components.Groups
 @using Microsoft.Extensions.Logging
 @using Blazor.Extensions.Canvas
+@using BlazorContextMenu
+@using Flagrum.Web.Persistence
