--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -7,9 +7,10 @@
         <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
         <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/>
         <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"/>
-        @* <MenuItem Icon="search" Text="File Inspector" Uri="/inspector"/> *@
+        @* <MenuItem Icon="folder_zip" Text="EARC Mods" Uri="/earc"/> *@
         @* <MenuItem Icon="share" Text="Sequence Editor" Uri="/sequenceeditor"></MenuItem> *@
         <div class="flex-grow"></div>
+        
         <MenuItem Icon="map" Text="Roadmap" Uri="/roadmap"/>
         <MenuItem Icon="info_outline" Text="About" Uri="/about"/>
         <MenuItem Icon="settings" Text="Settings" Uri="/settings"/>
@@ -29,6 +30,20 @@
         <div class="h-full p-6 scrollbar-light" style="max-height: 100%; overflow-y: auto">
             <h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
             <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+                <h4 class="text-grey-300 mb-4">Flagrum 1.1.5</h4>
+                <h5 class="text-grey-300 mb-4">Asset Explorer Game View</h5>
+                <ul class="list-disc ml-6 mb-6">
+                    <li>Allows for browsing game files without extraction (including preview of supported types)</li>
+                    <li>Added "Export with Dependencies" option that exports models with all textures and materials</li>
+                    <li>Added basic "Export" and "Export Folder" options for all file types</li>
+                </ul>
+                <h5 class="text-grey-300 mb-4">Modding</h5>
+                <ul class="list-disc ml-6 mb-6">
+                    <li>Fixed a bug where Model Replacement Mods were not rigging correctly</li>
+                </ul>
+            </div>
+
+            <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.4</h4>
                 <h5 class="text-grey-300 mb-4">Modding</h5>
                 <ul class="list-disc ml-6 mb-6">
@@ -36,19 +51,19 @@
                     <li>Support for custom normals from Flagrum Blender 1.0.4</li>
                 </ul>
             </div>
-            
+
             <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.3</h4>
                 <h5 class="text-grey-300 mb-4">Modding</h5>
                 <ul class="list-disc ml-6 mb-6">
                     <li>
-                        Support for increased 
-                        <Hyperlink Text="vertex weight limits" Uri="https://github.com/Kizari/Flagrum/wiki/Vertex-Weight-Limitations" />
+                        Support for increased
+                        <Hyperlink Text="vertex weight limits" Uri="https://github.com/Kizari/Flagrum/wiki/Vertex-Weight-Limitations"/>
                         on meshes with materials that support it
                     </li>
                 </ul>
             </div>
-            
+
             <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.2</h4>
                 <h5 class="text-grey-300 mb-4">Modding</h5>
