--- a/Flagrum.Web/Layout/MainLayout.razor
+++ b/Flagrum.Web/Layout/MainLayout.razor
@@ -6,9 +6,11 @@
 <div class="flex flex-row h-full">
     @if (Settings.IsReady)
     {
-        <MainMenu/>
+        <CascadingValue Value="this">
+            <MainMenu/>
+        </CascadingValue>
         <div class="main-content-view flex-grow h-full bg-grey-900 overflow-auto flex flex-col">
-            @if (AppState.Node == null)
+            @if (AppState.Node == null && IsReady)
             {
                 <div class="row py-2 px-4 text-grey-400" style="background-color: rgba(5, 5, 1, 0.35)">
                     <LoadingIndicator/>
@@ -34,6 +36,8 @@
 
 @code
 {
+    public bool IsReady { get; set; }
+
     public void CallStateHasChanged()
     {
         StateHasChanged();
