--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -7,11 +7,10 @@
     <div class="h-full bg-dark flex-shrink-0 flex flex-col border-dark-550 border-r">
         <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
         <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/>
-        <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"/>
         @* <MenuItem Icon="folder_zip" Text="EARC Mods" Uri="/earc"/> *@
-        @* <MenuItem Icon="share" Text="Sequence Editor" Uri="/sequenceeditor"></MenuItem> *@
+        <MenuItem Icon="share" Text="Sequence Editor" Uri="/sequenceeditor"></MenuItem>
         <div class="flex-grow"></div>
-
+        <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"/>
         <MenuItem Icon="map" Text="Roadmap" Uri="/roadmap"/>
         <MenuItem Icon="info_outline" Text="About" Uri="/about"/>
         <MenuItem Icon="settings" Text="Settings" Uri="/settings"/>
